// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NgJestConfig readTsConfig should return config including Angular compiler config with tsconfig as a string from ts-jest option 1`] = `
Object {
  "annotationsAs": "decorators",
  "composite": undefined,
  "declaration": false,
  "declarationDir": undefined,
  "declarationMap": undefined,
  "emitDeclarationOnly": undefined,
  "enableIvy": true,
  "esModuleInterop": true,
  "experimentalDecorators": true,
  "forceConsistentCasingInFileNames": true,
  "importHelpers": true,
  "importsNotUsedAsValues": 2,
  "inlineSourceMap": false,
  "inlineSources": true,
  "lib": Array [
    "lib.esnext.d.ts",
    "lib.dom.d.ts",
  ],
  "module": 1,
  "noEmit": false,
  "noFallthroughCasesInSwitch": true,
  "noImplicitReturns": true,
  "noUnusedLocals": true,
  "noUnusedParameters": true,
  "out": undefined,
  "outDir": "",
  "outFile": undefined,
  "removeComments": false,
  "skipLibCheck": true,
  "sourceMap": true,
  "sourceRoot": undefined,
  "strict": true,
  "suppressOutputPathCheck": true,
  "target": 1,
  "tsBuildInfoFile": undefined,
  "types": Array [
    "node",
    "jest",
  ],
}
`;

exports[`NgJestConfig readTsConfig should return config including Angular compiler config with tsconfig as an object from ts-jest option 1`] = `
Object {
  "annotationsAs": "decorators",
  "composite": undefined,
  "declaration": false,
  "declarationDir": undefined,
  "declarationMap": undefined,
  "emitDeclarationOnly": undefined,
  "enableIvy": true,
  "esModuleInterop": true,
  "experimentalDecorators": true,
  "forceConsistentCasingInFileNames": true,
  "importHelpers": true,
  "importsNotUsedAsValues": 2,
  "inlineSourceMap": false,
  "inlineSources": true,
  "lib": Array [
    "lib.esnext.d.ts",
    "lib.dom.d.ts",
  ],
  "module": 1,
  "noEmit": false,
  "noFallthroughCasesInSwitch": true,
  "noImplicitReturns": true,
  "noUnusedLocals": true,
  "noUnusedParameters": true,
  "out": undefined,
  "outDir": "",
  "outFile": undefined,
  "removeComments": false,
  "resolveJsonModule": true,
  "skipLibCheck": true,
  "sourceMap": true,
  "sourceRoot": undefined,
  "strict": true,
  "suppressOutputPathCheck": true,
  "target": 2,
  "tsBuildInfoFile": undefined,
  "types": Array [
    "node",
    "jest",
  ],
}
`;

exports[`NgJestConfig readTsConfig should return config including Angular compiler config without tsconfig defined in ts-jest option 1`] = `
Object {
  "annotationsAs": "decorators",
  "composite": undefined,
  "declaration": false,
  "declarationDir": undefined,
  "declarationMap": undefined,
  "emitDeclarationOnly": undefined,
  "enableIvy": true,
  "esModuleInterop": true,
  "experimentalDecorators": true,
  "forceConsistentCasingInFileNames": true,
  "importHelpers": true,
  "importsNotUsedAsValues": 2,
  "inlineSourceMap": false,
  "inlineSources": true,
  "lib": Array [
    "lib.esnext.d.ts",
    "lib.dom.d.ts",
  ],
  "module": 1,
  "noEmit": false,
  "noFallthroughCasesInSwitch": true,
  "noImplicitReturns": true,
  "noUnusedLocals": true,
  "noUnusedParameters": true,
  "out": undefined,
  "outDir": "",
  "outFile": undefined,
  "removeComments": false,
  "skipLibCheck": true,
  "sourceMap": true,
  "sourceRoot": undefined,
  "strict": true,
  "suppressOutputPathCheck": true,
  "target": 2,
  "tsBuildInfoFile": undefined,
  "types": Array [
    "node",
    "jest",
  ],
}
`;
